# kiditrade-core

./: Cargo.toml  Dockerfile  README.org  build.rs  docker-compose.yml  shell.nix
migrations/2019-12-26-151624_create_bars/: down.sql  up.sql
src/: backtest.rs  candle.rs  cli.rs  import.rs  main.rs  time_buckets.rs
