
[package]
name = "kiditrade_core"
version = "0.1.0"
authors = ["Arnaud Rebts <arnaud.rebts@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.2.0-alpha.5"

tonic = "0.1"
prost = "0.6"
prost-types = "0.6"
futures-core = "0.3"
futures-util = "0.3"
tokio = { version = "0.2", features = ["macros", "sync", "stream", "time"] }
tokio-postgres = "0.5"

async-stream = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.7"

chrono = { version = "0.4", features = ["serde"] }

rust_decimal = { version = "1.2", features = ["serde", "postgres"] }
pg_interval = "0.3.0"
structopt = "0.3.11"

[build-dependencies]
tonic-build = "0.1.0"
